--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <h1><bold>Welcome to Group 13 React App IBM Accelerate Program 2021</bold></h1>
+  <h4>Members: Alexis Cathcart, Amber Martinez, Angela Tom, Arvin Lin, Briana Walker, Naomi Koh, Sam Scheer, and Steven Fernandez Mentor: DeAndra Smith</h4>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -36,6 +38,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <style>
+      h1 {text-align: center;}
+      h4 {text-align: center;}
+    </style>
 </body>
 
 </html>
